--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -4,6 +4,13 @@ undeletable-fluids=Undeletable Fluids
 [mod-description]
 undeletable-fluids=Prevents the flushing of fluids in pipes and tanks. Use this to prevent cheesing the disposal of byproducts.
 
-[undeletable-fluids]
-nope=Nope!
+[mod-setting-name]
+undeletable_fluids_nope=Nope!
 
+[mod-setting-description]
+undeletable_fluids_nope=Replaces the message when someone tries to flush a fluid.
+
+[undeletable-fluids]
+prevented=Flushing fluids is disabled.
+prevented_specific_fluid=Cannot flush __1__.
+nope=Nope!
