--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -6,9 +6,16 @@ undeletable-fluids=Prevents the flushing of fluids in pipes and tanks. Use this 
 
 [mod-setting-name]
 undeletable_fluids_nope=Nope!
+undeletable_fluids_flush_action=When someone flushes a fluid
 
 [mod-setting-description]
-undeletable_fluids_nope=Replaces the message when someone tries to flush a fluid.
+undeletable_fluids_nope=Replaces the message when someone is blocked from flushing a fluid.
+
+[string-mod-setting]
+undeletable_fluids_flush_action-nothing=Do nothing (disable mod)
+undeletable_fluids_flush_action-prevent=Prevent flushing
+undeletable_fluids_flush_action-explosion=Explosion
+undeletable_fluids_flush_action-atomic_explosion=Atomic explosion
 
 [undeletable-fluids]
 prevented=Flushing fluids is disabled.
