New error flying text

--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -18,6 +18,8 @@ undeletable_fluids_flush_action-explosion=Explosion
 undeletable_fluids_flush_action-atomic_explosion=Atomic explosion
 
 [undeletable-fluids]
-prevented=Flushing fluids is disabled.
-prevented_specific_fluid=Cannot flush __1__.
+flush_prevented=Flushing fluids is disabled.
+flush_prevented_specific_fluid=Cannot flush __1__.
+mining_prevented=No space to move the fluid inside.
+mining_prevented_specific_fluid=No space to move the __1__ inside.
 nope=Nope!
