Add destruction action

--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -8,6 +8,7 @@ undeletable-fluids=Prevents the flushing of fluids in pipes and tanks. Use this 
 undeletable_fluids_nope=Nope!
 undeletable_fluids_flush_action=When someone flushes a fluid
 undeletable_fluids_removal_action=When a tank is removed with nowhere for the fluid to go
+undeletable_fluids_destruction_action=When a tank is destroyed with fluid inside
 
 [mod-setting-description]
 undeletable_fluids_nope=Replaces the message when someone is blocked from flushing a fluid.
@@ -21,10 +22,14 @@ undeletable_fluids_removal_action-nothing=Do nothing
 undeletable_fluids_removal_action-prevent=Prevent removal
 undeletable_fluids_removal_action-explosion=Explosion
 undeletable_fluids_removal_action-atomic_explosion=Atomic explosion
+undeletable_fluids_destruction_action-nothing=Do nothing
+undeletable_fluids_destruction_action-prevent=Prevent destruction
+undeletable_fluids_destruction_action-explosion=Explosion
+undeletable_fluids_destruction_action-atomic_explosion=Atomic explosion
 
 [undeletable-fluids]
 flush_prevented=Flushing fluids is disabled.
 flush_prevented_specific_fluid=Cannot flush __1__.
-mining_prevented=No space to move the fluid inside.
-mining_prevented_specific_fluid=No space to move the __1__ inside.
+mining_prevented=No space to move the fluid out.
+mining_prevented_specific_fluid=No space to move the __1__ out.
 nope=Nope!
