Specific fluid messages

--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -29,7 +29,7 @@ undeletable_fluids_destruction_action-atomic_explosion=Atomic explosion
 
 [undeletable-fluids]
 flush_prevented=Flushing fluids is disabled.
-flush_prevented_specific_fluid=Cannot flush __1__.
+flush_prevented_specific_fluid=Cannot flush [img=__1__]__2__.
 mining_prevented=No space to move the fluid out.
-mining_prevented_specific_fluid=No space to move the __1__ out.
+mining_prevented_specific_fluid=No space to move the [img=__1__]__2__ out.
 nope=Nope!
