Try and keep temperature after flushing

--- a/locale/en/undeletable-fluids.cfg
+++ b/locale/en/undeletable-fluids.cfg
@@ -31,6 +31,7 @@ undeletable_fluids_destruction_action-atomic_explosion=Atomic explosion
 
 [undeletable-fluids]
 flush_prevented=Flushing fluids is disabled.
+flush_prevented_temperature_reset=Flushing fluids is disabled.\n[img=utility/warning_icon]Due to modding limitations, temperature was reset.
 flush_prevented_specific_fluid=Cannot flush [img=__1__]__2__.
 mining_prevented=No space to move the fluid out.
 mining_prevented_specific_fluid=No space to move the [img=__1__]__2__ out.
